DEV-322 Fix button alignment on validators table

--- a/src/pages/Stake/index.scss
+++ b/src/pages/Stake/index.scss
@@ -88,7 +88,7 @@
 .stake .table .actions {
 	display: flex;
 	align-items: center;
-	justify-content: center;
+	justify-content: flex-end;
 }
 
 .table .actions > span {
